fixed more header problems, made the spacing better

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1353,7 +1353,7 @@ aside .thumb figure {
 	float: none;
 	display: table-cell;
 	vertical-align: middle;
-	padding-left: 30px;
+	padding-left: 40px;
     margin: 0;
 }
 .navbar-nav > li > a {
