--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,11 @@
 
 
 
-.navbar-brand{padding:  0px;}
+.navbar-brand{padding-left: 0px;  margin-left: 0px;}
+
+div.container{padding-left: 0px;  margin-left: 0px;}
+
+
+
+
+
